# treq

./: .coveragerc  .deepsource.toml  .gitignore  .readthedocs.yml  .rtd-requirements.txt  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  SECURITY.md  mypy.ini  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  test_treq_integration.py  tox.ini  tox2travis.py  toxic.py  treq.py
.github/workflows/: ci.yaml
changelog.d/: 212.feature.rst  225.bugfix.rst  228.feature.rst  233.doc.rst  235.doc.rst  237.doc.rst  253.bugfix.rst  264.bugfix.rst  268.feature.rst  271.feature.rst  276.doc.rst  278.doc.rst  281.doc.rst  282.bugfix.rst  287.bugfix.rst  289.feature.rst  294.removal.rst  295.bugfix.rst  296.doc.rst  297.removal.rst  299.feature.rst  302.removal.rst  303.bugfix.rst  305.feature.rst  306.removal.rst  307.removal.rst  309.removal.rst  312.bugfix.rst  313.doc.rst  314.bugfix.rst  318.removal.rst  327.bugfix.rst  329.feature.rst  338.feature.rst  338.removal.rst  339.bugfix.rst  343.bugfix.rst  347.feature.rst  355.bugfix.rst  361.removal.rst  (+7 more)
docs/: Makefile  api.rst  changes.rst  conf.py  howto.rst  index.rst  make.bat  testing.rst
docs/_examples/: basic_auth.py  basic_get.py  basic_post.py  download_file.py  query_params.py
docs/examples/: _utils.py  basic_auth.py  basic_get.py  basic_post.py  basic_url.py  custom_agent.py  custom_auth.py  digest_auth.py  disable_redirects.py  download_file.py  https_server.tac  iresource.py  json_post.py  proxy_with_authentication.py  query_params.py  redirects.py  response_history.py  server.pem  testing_seq.py  using_certs.py  using_cookies.py
integration/: README  run.py  test_treq.py
posters/: test_treq.py
src/treq/: __init__.py  __init__.pyi  _agentspy.py  _cgi.py  _recorder.py  _types.py  _types.pyi  _utils.py  _utils.pyi  _version.py  _version.pyi  api.py  api.pyi  auth.py  auth.pyi  client.py  client.pyi  content.py  content.pyi  multipart.py  multipart.pyi  response.py  response.pyi  testing.py  testing.pyi
src/treq/test/: httpbin_server.py  test_agentspy.py  test_api.py  test_auth.py  test_client.py  test_content.py  test_import.py  test_multipart.py  test_recorder.py  test_response.py  test_testing.py  test_treq_integration.py  test_utils.py  util.py
src/treq/test/local_httpbin/: child.py  parent.py  shared.py
src/treq/test/local_httpbin/test/: test_child.py  test_parent.py  test_shared.py
treq/: __init__.py  _cookies.py  _utils.py  api.py  auth.py  client.py  content.py  interfaces.py  multipart.py  response.py  testing.py  util.py
treq/test/: _proxyutil.py  server.pem  test_api.py  test_auth.py  test_client.py  test_content.py  test_length_consumer.py  test_multipart.py  test_response.py  test_testing.py  test_treq_integration.py  test_utils.py  util.py
