[build-system]
requires = [
    "setuptools >= 35.0.2",
    "wheel >= 0.29.0",
    "incremental >= 21.3.0",
]
build-backend = "setuptools.build_meta"

[tool.towncrier]
package = "treq"
package_dir = "src"
filename = "CHANGELOG.rst"
directory = "changelog.d"
title_format = "{version} ({project_date})"
issue_format = "`#{issue} <https://github.com/twisted/treq/issues/{issue}>`__"
