[bdist_wheel]
# use py2.py3 tag for pure-python dist:
universal=1

[metadata]
requires-dist =
    pyOpenSSL >= 0.15.1; python_version > '3.0'
    pyOpenSSL >= 0.13; python_version < '3.0'
    requests >= 2.1.0
    service_identity >=14.0.0
    Twisted >= 15.5.0; python_version > '3.0'
    Twisted >= 14.0.2; python_version < '3.0'
